sizing fixed. vertical spacing WIP

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
 }
 
 h1 {
+    margin-top: 10px;
     text-align: center;
 }
 
@@ -14,22 +15,24 @@ h1 {
 }
 
 div {
-    position: relative;
     margin-bottom: 20px;
 }
 
+div.clear {
+    margin-bottom: 0;
+    clear: left;
+}
+
 p {
-    margin-top: 35px;
+    margin-top: 15px;
     margin-left: 10px;
     width: 95%;
+    float: left;
 }
 
 div.default {
     background-color: gray;
-    margin-right: auto;
-    margin-left: auto;
     height: 170px;
-    width: 90%;
     border: 1px solid black;
 }
 
@@ -57,6 +60,7 @@ header.three {
     .col-lg {
         float: left;
         width: 33.33%;
+        padding: 10px;
     }
 }
 
@@ -64,10 +68,11 @@ header.three {
     .col-md {
         float: left;
         width: 50%;
+        padding: 10px;
     }
 
-    .text3 {
-        width: auto;
+    div.text3 {
+        width: 100%;
     }
 }
 
@@ -75,5 +80,6 @@ header.three {
     .col-sm {
         float: left;
         width: 100%;
+        padding: 10px;
     }
 }
